--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,5 +1,5 @@
 .container {
-  margin: 0 20px;
+  margin: 0 auto;
 }
 
 .section {
@@ -11,6 +11,12 @@
   position: fixed;
   bottom: 20px;
   right: 20px;
+
+  img {
+    height: 80px;
+    width: 80px;
+  }
+
 }
 
 @media (min-width: 768px) {
