--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .container {
-  margin: 0 20px;
+  margin: 0 auto;
 }
 
 .section {
@@ -24,6 +24,10 @@ body {
   position: fixed;
   bottom: 20px;
   right: 20px;
+}
+.floating-btn img {
+  height: 80px;
+  width: 80px;
 }
 
 @media (min-width: 768px) {
