--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -3,7 +3,12 @@ body {
 }
 
 .container {
-  margin: 0 auto;
+  margin: 0 40px;
+}
+
+.container-secondary {
+  padding: 0 40px;
+  background-color: $secondary;
 }
 
 .section {
@@ -23,9 +28,71 @@ body {
 
 }
 
-@media (min-width: 768px) {
+.hero-intro {
+  background-image: url('assets/img/takahiro-taguchi-585549-unsplash.jpg');
+  background-repeat: no-repeat;
+  background-size: auto 100%;
+  background-position-x: center;
+  margin-top: 80px;
+  padding: 0 40px;
+  overflow: hidden;
+  min-height: 100vh;
+  padding-top: 0px;
+  margin: 0px;
+  padding-top: 100px;
+  text-shadow: black 0px 2px 10px;
+}
+
+.testimonials {
+  background-color: $primary;
+}
+
+.benefits {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background-color: $secondary;
+  padding-top: 40px;
+
+  h2 {
+    width: 100%;
+  }
+
+  .feature {
+    width: 100%;
+    padding-bottom: 40px;
+
+    img {
+      height: 100px;
+      width:auto;
+    }
+    
+    // @media (min-width: $desktop-width) {
+    //   width: 33%;
+    // }
+
+  }
+
+  .cta-btn {
+    background-color: $primary;
+    border-radius: 20px;
+    margin-bottom: 80px;
+    width: 100%;
+    line-height: 4em;
+    height: 4em;
+    box-shadow: black 0px 2px 10px;
+    a {
+      color: $secondary;
+      text-decoration: none;
+    }
+  }
+
+
+}
+
+@media (min-width: $desktop-width) {
   .container {
-    max-width: 728px;
+    max-width: $desktop-width;
     margin: 0 auto;
   }
 }
