--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -7,11 +7,11 @@ body {
 
 h1 {
   font-weight: 700;
-  font-size: 2.65em;
+  font-size: 2.6em;
 }
 
 h2 {
-  font-size: 1.93em;
+  font-size: 1em;
 }
 
 h3 {
@@ -19,7 +19,7 @@ h3 {
 }
 
 h4 {
-  font-size: 1.62em;
+  font-size: 1.3em;
 }
 
 p {
@@ -35,4 +35,9 @@ p {
 .scrolldown-btn {
   font-weight: 500;
   font-size: 1.125em;
+}
+
+
+.container-secondary {
+  color: $primary;
 }
