--- a/style.css
+++ b/style.css
@@ -20,11 +20,11 @@ body {
 
 h1 {
   font-weight: 700;
-  font-size: 2.65em;
+  font-size: 2.6em;
 }
 
 h2 {
-  font-size: 1.93em;
+  font-size: 1em;
 }
 
 h3 {
@@ -32,7 +32,7 @@ h3 {
 }
 
 h4 {
-  font-size: 1.62em;
+  font-size: 1.3em;
 }
 
 p {
@@ -50,12 +50,21 @@ p {
   font-size: 1.125em;
 }
 
+.container-secondary {
+  color: #1A7E80;
+}
+
 body {
   background-color: #1A7E80;
 }
 
 .container {
-  margin: 0 auto;
+  margin: 0 40px;
+}
+
+.container-secondary {
+  padding: 0 40px;
+  background-color: #fff;
 }
 
 .section {
@@ -73,9 +82,60 @@ body {
   width: 80px;
 }
 
+.hero-intro {
+  background-image: url("assets/img/takahiro-taguchi-585549-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-size: auto 100%;
+  background-position-x: center;
+  margin-top: 80px;
+  padding: 0 40px;
+  overflow: hidden;
+  min-height: 100vh;
+  padding-top: 0px;
+  margin: 0px;
+  padding-top: 100px;
+  text-shadow: black 0px 2px 10px;
+}
+
+.testimonials {
+  background-color: #1A7E80;
+}
+
+.benefits {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background-color: #fff;
+  padding-top: 40px;
+}
+.benefits h2 {
+  width: 100%;
+}
+.benefits .feature {
+  width: 100%;
+  padding-bottom: 40px;
+}
+.benefits .feature img {
+  height: 100px;
+  width: auto;
+}
+.benefits .cta-btn {
+  background-color: #1A7E80;
+  border-radius: 20px;
+  margin-bottom: 80px;
+  width: 100%;
+  line-height: 4em;
+  height: 4em;
+  box-shadow: black 0px 2px 10px;
+}
+.benefits .cta-btn a {
+  color: #fff;
+  text-decoration: none;
+}
+
 @media (min-width: 768px) {
   .container {
-    max-width: 728px;
+    max-width: 768px;
     margin: 0 auto;
   }
 }
