--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -29,7 +29,7 @@ body {
 }
 
 .hero-intro {
-  background-image: url('assets/img/takahiro-taguchi-585549-unsplash.jpg');
+  background-image: url('assets/img/background.png');
   background-repeat: no-repeat;
   background-size: auto 100%;
   background-position-x: center;
@@ -39,8 +39,7 @@ body {
   min-height: 100vh;
   padding-top: 0px;
   margin: 0px;
-  padding-top: 100px;
-  text-shadow: black 0px 2px 10px;
+  text-shadow: #0a2d2d 0px 2px 10px;
 }
 
 .testimonials {
@@ -80,7 +79,7 @@ body {
     width: 100%;
     line-height: 4em;
     height: 4em;
-    box-shadow: black 0px 2px 10px;
+    box-shadow: #0000006e 0px 2px 10px;
     a {
       color: $secondary;
       text-decoration: none;
@@ -104,6 +103,13 @@ body {
     padding: 0 10px;
   }
 
+}
+
+.testimonial {
+  img {
+    border-radius: 100%;
+    width: 120px;
+  }
 }
 
 // @media (min-width: $desktop-width) {
