--- a/style.css
+++ b/style.css
@@ -20,19 +20,23 @@ body {
 
 h1 {
   font-weight: 700;
-  font-size: 2.6em;
+  font-size: 42pt;
+  line-height: 0;
 }
 
 h2 {
-  font-size: 1em;
+  font-size: 31pt;
+  font-weight: 500;
 }
 
 h3 {
-  font-size: 1.62em;
+  font-size: 23pt;
+  font-weight: 500;
 }
 
 h4 {
-  font-size: 1.3em;
+  font-size: 18pt;
+  font-weight: 400;
 }
 
 p {
@@ -42,12 +46,20 @@ p {
 
 .cta-text {
   font-weight: 600;
-  font-size: 1.125em;
+  font-size: 18pt;
+  padding-top: 95px;
 }
 
 .scrolldown-btn {
   font-weight: 500;
   font-size: 1.125em;
+}
+
+hero-intro h2 {
+  line-height: 0.3;
+}
+hero-intro h3 {
+  line-height: 0.3;
 }
 
 .container-secondary {
@@ -87,7 +99,7 @@ body {
 }
 
 .hero-intro {
-  background-image: url("assets/img/takahiro-taguchi-585549-unsplash.jpg");
+  background-image: url("assets/img/background.png");
   background-repeat: no-repeat;
   background-size: auto 100%;
   background-position-x: center;
@@ -97,8 +109,7 @@ body {
   min-height: 100vh;
   padding-top: 0px;
   margin: 0px;
-  padding-top: 100px;
-  text-shadow: black 0px 2px 10px;
+  text-shadow: #0a2d2d 0px 2px 10px;
 }
 
 .testimonials {
@@ -130,7 +141,7 @@ body {
   width: 100%;
   line-height: 4em;
   height: 4em;
-  box-shadow: black 0px 2px 10px;
+  box-shadow: #0000006e 0px 2px 10px;
 }
 .benefits .cta-btn a {
   color: #fff;
@@ -148,6 +159,11 @@ body {
 .certifications .brand-logo {
   width: 33.3%;
   padding: 0 10px;
+}
+
+.testimonial img {
+  border-radius: 100%;
+  width: 120px;
 }
 
 /*# sourceMappingURL=style.css.map */
